[metadata]
name = tv2-video-filter
version = 0.0.1
author = Zulan

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    # Stupid bug, can't run vlc https://stackoverflow.com/q/60042568
    opencv-python-headless

[options.entry_points]
console_scripts =
    tv2_video_filter = tv2_video_filter:main